--- a/.github/workflows/waka-readme.yml
+++ b/.github/workflows/waka-readme.yml
@@ -6,8 +6,7 @@ on:
   pull_request:
     branches: ["main"]
   schedule:
-    # Runs at 12am UTC
-    - cron: '0 0 * * *'
+    - cron: '0 0 * * 0'
 
 jobs:
   update-readme:
